--- a/config_sample.env
+++ b/config_sample.env
@@ -1,12 +1,12 @@
-BOT_TOKEN=
-OWNER_ID=
-TELEGRAM_API=
-TELEGRAM_HASH=
-DATABASE_URL=
-CMD_SUFFIX=
-LEECH_LOG_ID=
-MIRROR_LOG_ID=
-LINKS_LOG_ID=
+BOT_TOKEN=8212814456:AAHijedWBl7FD06XT52h-Tr3MlNr4l51RwQ
+OWNER_ID=8557029592
+TELEGRAM_API=31355944
+TELEGRAM_HASH=167e960d46363e3098f9c1fc78496adb
+DATABASE_URL=mongodb+srv://botskingdom2:t7ognZuINrNfH3tj@cluster0.ystdy4m.mongodb.net/?retryWrites=true&w=majority
+CMD_SUFFIX=1
+LEECH_LOG_ID=-1003848193038
+MIRROR_LOG_ID=-1003848193038
+LINKS_LOG_ID=-1003848193038
 DOWNLOAD_DIR=/usr/src/app/downloads/
 RSS_DELAY=600
 STATUS_UPDATE_INTERVAL=10
@@ -19,4 +19,5 @@ AUTHOR_NAME=⚡𝗛𝗘𝗠𝗔𝗡𝗧𝗛⚡
 AUTHOR_URL=https://t.me/ALONEKINGSTAR77
 TITLE_NAME=⚡𝗛𝗘𝗠𝗔𝗡𝗧𝗛⚡
 GD_INFO=Uploaded by ⚡𝗛𝗘𝗠𝗔𝗡𝗧𝗛⚡
+PORT=8000
 FFMPEG_THREADS=
