--- a/config.env
+++ b/config.env
@@ -4,9 +4,9 @@ TELEGRAM_API=31355944
 TELEGRAM_HASH=167e960d46363e3098f9c1fc78496adb
 DATABASE_URL=mongodb+srv://botskingdom2:t7ognZuINrNfH3tj@cluster0.ystdy4m.mongodb.net/?retryWrites=true&w=majority
 CMD_SUFFIX=2
-LEECH_LOG_ID=-1003858344287
-MIRROR_LOG_ID=-1003858344287
-LINKS_LOG_ID=-1003858344287
+LEECH_LOG_ID=
+MIRROR_LOG_ID=
+LINKS_LOG_ID=
 DOWNLOAD_DIR=/usr/src/app/downloads/
 RSS_DELAY=600
 STATUS_UPDATE_INTERVAL=10
