--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 # Mandatory
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "8578578050:AAF691zDlnkqaSp0z2QZMdCZtnggLy7y2DY"
+OWNER_ID = "8557029592"
+TELEGRAM_API = "31355944"
+TELEGRAM_HASH = "167e960d46363e3098f9c1fc78496adb"
 
 # Optional
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://botskingdom2:t7ognZuINrNfH3tj@cluster0.ystdy4m.mongodb.net/?retryWrites=true&w=majority"
 GDRIVE_ID = ""
 IS_TEAM_DRIVE = "False"
 INDEX_URL = ""
